# cv_tricks

./: .clang-format  CMakeLists.txt  CMakeUserPresets.json  README.md  conandata.yml  conanfile.py
src/: cv_tricks.cpp  irenderable.hpp  render_loop.hpp  renderables.hpp  shader.hpp
src/shaders/: fullscreen_quad.frag  light_source.frag  light_source.vert
src/utilities/: utils_math.hpp  utils_shaders.hpp
